Many things work, including clickHandler. GoblinData.hp subtraction only subtracts the first goblin HP.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
                 <h2>Your HP: <span id='playerHP'>10</span></h2>
                 <img src="./assets/warrior.png">
             </div>
-    </section>    
     <div class="goblin-stats">
         <div>
         <form id="add-goblins"><input name="goblin-name" /><button>Call out your next opponent!</button>
@@ -34,7 +33,7 @@
         </div>
         </div>
     </main>
-    <footer>Certified DFTab Production</footer>
+    <footer>David Made It</footer>
 
     <script type="module" src="./app.js"></script>
 </body>
